crates/gridwell-writer-svg/tests/snapshots/snapshots__rowspan-basic.snap
---
source: crates/gridwell-writer-svg/tests/snapshots.rs
expression: out
---
<svg xmlns="http://www.w3.org/2000/svg" width="143" height="124" viewBox="0 0 143 124">
<style>text { font-family: Arial, sans-serif; font-size: 14px; }</style>
<text x="8" y="22.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold">Country</tspan></text>
<text x="134.7" y="22.9" font-size="14px" text-anchor="end" xml:space="preserve"><tspan font-weight="bold">Value</tspan></text>
<text x="8" y="64.9" font-size="14px" xml:space="preserve">Japan</text>
<text x="134.7" y="50.9" font-size="14px" text-anchor="end" xml:space="preserve">100</text>
<text x="134.7" y="78.9" font-size="14px" text-anchor="end" xml:space="preserve">110</text>
<text x="8" y="106.9" font-size="14px" xml:space="preserve">Korea</text>
<text x="134.7" y="106.9" font-size="14px" text-anchor="end" xml:space="preserve">80</text>
<line x1="0" y1="32" x2="80.92" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="80.92" y1="32" x2="142.7" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="88" x2="80.92" y2="88" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="80.92" y1="60" x2="142.7" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="80.92" y1="88" x2="142.7" y2="88" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="116" x2="80.92" y2="116" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="80.92" y1="116" x2="142.7" y2="116" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="32" x2="142.7" y2="32" stroke="#333333" stroke-width="1.5"/>
</svg>
