crates/gridwell-writer-svg/tests/snapshots/snapshots__single-row.snap
---
source: crates/gridwell-writer-svg/tests/snapshots.rs
expression: out
---
<svg xmlns="http://www.w3.org/2000/svg" width="122" height="68" viewBox="0 0 122 68">
<style>text { font-family: Arial, sans-serif; font-size: 14px; }</style>
<text x="8" y="22.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold">W</tspan></text>
<text x="39.68" y="22.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold">X</tspan></text>
<text x="69.68" y="22.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold">Y</tspan></text>
<text x="99.68" y="22.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold">Z</tspan></text>
<text x="8" y="50.9" font-size="14px" xml:space="preserve">1</text>
<text x="39.68" y="50.9" font-size="14px" xml:space="preserve">2</text>
<text x="69.68" y="50.9" font-size="14px" xml:space="preserve">3</text>
<text x="99.68" y="50.9" font-size="14px" xml:space="preserve">4</text>
<line x1="0" y1="32" x2="31.68" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="31.68" y1="32" x2="61.68" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="61.68" y1="32" x2="91.68" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="91.68" y1="32" x2="121.68" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="60" x2="31.68" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="31.68" y1="60" x2="61.68" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="61.68" y1="60" x2="91.68" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="91.68" y1="60" x2="121.68" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="32" x2="121.68" y2="32" stroke="#333333" stroke-width="1.5"/>
</svg>
