crates/gridwell-writer-svg/tests/snapshots/snapshots__snapshot_colspan_basic.snap
---
source: crates/gridwell-writer-svg/tests/snapshots.rs
expression: "render(\"minimal/colspan_basic.json\")"
---
<svg xmlns="http://www.w3.org/2000/svg" width="360" height="120" viewBox="0 0 360 120">
<style>text { font-family: Arial, sans-serif; font-size: 14px; } </style>
<line x1="0" y1="28" x2="120" y2="28" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="120" y1="28" x2="360" y2="28" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="128" y="24" font-weight="bold">Scores</text>
<line x1="0" y1="28" x2="360" y2="28" stroke="#333333" stroke-width="1.5"/>
<line x1="0" y1="56" x2="120" y2="56" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="8" y="52" font-weight="bold">Name</text>
<line x1="120" y1="56" x2="240" y2="56" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="128" y="52" font-weight="bold">Q1</text>
<line x1="240" y1="56" x2="360" y2="56" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="248" y="52" font-weight="bold">Q2</text>
<line x1="0" y1="56" x2="360" y2="56" stroke="#333333" stroke-width="1.5"/>
<line x1="0" y1="84" x2="120" y2="84" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="8" y="80">Alice</text>
<line x1="120" y1="84" x2="240" y2="84" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="128" y="80">90</text>
<line x1="240" y1="84" x2="360" y2="84" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="248" y="80">95</text>
<line x1="0" y1="112" x2="120" y2="112" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="8" y="108">Bob</text>
<line x1="120" y1="112" x2="240" y2="112" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="128" y="108">85</text>
<line x1="240" y1="112" x2="360" y2="112" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="248" y="108">88</text>
</svg>
