crates/gridwell-writer-svg/tests/snapshots/snapshots__snapshot_column_widths.snap
---
source: crates/gridwell-writer-svg/tests/snapshots.rs
expression: "render(\"minimal/column_widths.json\")"
---
<svg xmlns="http://www.w3.org/2000/svg" width="680" height="92" viewBox="0 0 680 92">
<style>text { font-family: Arial, sans-serif; font-size: 14px; } </style>
<line x1="0" y1="28" x2="200" y2="28" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="8" y="24" font-weight="bold">Fixed PX</text>
<line x1="200" y1="28" x2="320" y2="28" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="208" y="24" font-weight="bold">Percent</text>
<line x1="320" y1="28" x2="440" y2="28" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="328" y="24" font-weight="bold">Fractional</text>
<line x1="440" y1="28" x2="560" y2="28" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="448" y="24" font-weight="bold">2x Fractional</text>
<line x1="560" y1="28" x2="680" y2="28" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="568" y="24" font-weight="bold">Auto</text>
<line x1="0" y1="28" x2="680" y2="28" stroke="#333333" stroke-width="1.5"/>
<line x1="0" y1="56" x2="200" y2="56" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="8" y="52">200px wide</text>
<line x1="200" y1="56" x2="320" y2="56" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="208" y="52">20% wide</text>
<line x1="320" y1="56" x2="440" y2="56" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="328" y="52">1fr</text>
<line x1="440" y1="56" x2="560" y2="56" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="448" y="52">2fr</text>
<line x1="560" y1="56" x2="680" y2="56" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="568" y="52">auto</text>
<line x1="0" y1="84" x2="200" y2="84" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="8" y="80">content</text>
<line x1="200" y1="84" x2="320" y2="84" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="208" y="80">content</text>
<line x1="320" y1="84" x2="440" y2="84" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="328" y="80">content</text>
<line x1="440" y1="84" x2="560" y2="84" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="448" y="80">content</text>
<line x1="560" y1="84" x2="680" y2="84" stroke="#d0d0d0" stroke-width="0.5"/>
<text x="568" y="80">content</text>
</svg>
